--- a/components/kanban/App.module.css
+++ b/components/kanban/App.module.css
@@ -46,7 +46,7 @@
     padding: 10px 30px;
     display: flex;
     gap: 30px;
-    background: #555
+    /* background: #555 */
     
   }
   
@@ -65,6 +65,7 @@
     box-shadow: 1px 1px 0 1px rgba(0, 0, 0, 0.12);
     width: 100%;
     text-align: center;
+    @apply text-dark-500 dark:text-light-700 !important;
   }
   .app_boards_add-board_edit {
     background-color: #fff;
